# spotility

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
spotility/: ratings.json
src/: main.rs
