[package]
name = "spotility"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["env"] }
clipboard = "0.5.0"
futures = "0.3.30"
rspotify = { version = "0.12.0", features = ["cli"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
